#..............................................................
# CMakeList.txt : CMake project for Compilers, W23.
#..............................................................
#
#
# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
# @@@@                                                               @@@@
# @@          /       ==============================        /          @@
# @         ////           @@       @@ #@                  ////         @
# @         ////*          @@ @%  @ @@    @@  @ #@#       /////         @
# @     ((( ////))))   @@  @% @%  @ @@ #@ @@  @ #@@#   ///////( ///     @
# @     ((((,/ )))))    @@@@   @@@  @@ ##  @@@   #@#   ///// ,/////     @
# @     (((((/)))((    ------------------------------    ((((./////*    @
# @    //*./ /  .///   ---  PROGRAMMING LANGUAGE  ---  ////   / ( (//   @
# @    ///// / /////   ==============================  * ////* / ////   @
# @     ///// ///// ((                               (( ///// /////     @
# @    ((((   / , (((((                             (((((  //   /(((    @
# @    (((((((/ . (((((                          (((((* / (((((((       @
# @      (((((( //((((/((((                    *((((/((((/( (((((/      @
# @       .//,   * /   (((((                   (((((  ///    .//.       @
# @     ,////////./(  (((((* ////         (///(((((( ,/(,////////       @
# @         //////// ,// ((( /////,     ////// ((( //  /////// *        @
# @            (((((((((,// * /////     /////   (//(((((((((            @
# @            ((((((((((((/////         //.///  (((((((((((.           @
# @                   (///////// //(   (//.//////////                   @
# @                  (/////////             //////////                  @
# @                                                                     @
# @@          A L G O N Q U I N   C O L L E G E  -  2 0 2 3 W          @@
# @@@@                                                               @@@@
# @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
#

cmake_minimum_required (VERSION 3.8)

project ("JupiterCompiler")

# Add source to this project's executable: check name and dependences
add_executable (JupiterCompiler
	"Compilers.h"	"Compilers.c"
	"Reader.h"		"Reader.c"		"MainReader.c"
"Scanner.h"		"Scanner.c"		"MainScanner.c"
	"Parser.h"		"Parser.c"		"MainParser.c"
)

# TO_DO: Add tests and install targets if needed.
